ant design alignment issue

--- a/src/globals.css
+++ b/src/globals.css
@@ -16,6 +16,6 @@ body {
 	-webkit-text-size-adjust: 100%;
 }
 
-.css-dev-only-do-not-override-18iikkb.ant-row {
+.ant-row {
 	justify-content: center;
 }
